# shouldichillorshouldigo

./: .editorconfig  README.md
.github/workflows/: deploy-to-vps.yml
api/: Cargo.toml  Dockerfile  service_file
api/src/: main.rs  structs.rs  tests.rs
frontend/: .env.production  .gitignore  .prettierrc.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.css  index.js  reportWebVitals.js
frontend/src/components/CenterDivider/: CenterDivider.js  index.js
frontend/src/components/CurrentLocation/: CurrentLocation.js  index.js
frontend/src/components/DestinationLocation/: DestinationLocation.js  index.js
frontend/src/components/LeafletMap/: LeafletMap.js  index.js
frontend/src/components/LineChoice/: LineChoice.js  index.js
frontend/src/components/MainContainer/: MainContainer.js  index.js
frontend/src/components/MainStepper/: MainStepper.js  index.js
frontend/src/components/PaperContainer/: PaperContainer.js  index.js
frontend/src/components/PlaceAutocomplete/: PlaceAutocomplete.js  index.js
frontend/src/components/Timer/: Timer.js  index.js
frontend/src/components/TopBar/: TopBar.js  index.js
frontend/src/services/: api.js  initialState.js  reducer.js  store.js
frontend/src/tests/: App.test.js
frontend/src/views/App/: App.js  index.js
